--- a/index.html
+++ b/index.html
@@ -9,45 +9,37 @@
 <body>
     <header>
         <h1>Abhishek Tiwari</h1>
-        <p>PhD Scholar, IIT Delhi | Machine Learning • NLP • Complexity Theory</p>
+        <p>PhD Scholar, IIT Delhi | Theoretical Computer Science• Complexity Theory</p>
     </header>
     <nav>
         <a href="#about">About</a>
         <a href="#research">Research</a>
         <a href="#publications">Publications</a>
-        <a href="#projects">Projects</a>
         <a href="cv.pdf" target="_blank">CV</a>
         <a href="#contact">Contact</a>
     </nav>
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a PhD scholar at IIT Delhi with a background in computer science and a passion for AI, NLP, and theoretical computer science.</p>
+            <p>I am a PhD scholar at IIT Delhi with a background in computer science and a passion for theoretical computer science,ML and AI.</p>
         </section>
         <section id="research">
             <h2>Research Interests</h2>
             <ul>
-                <li>Natural Language Processing (NLP)</li>
-                <li>Machine Learning & Large Language Models</li>
+                <li>Theoretical CS</li>
+                <li>Comparator Circuits and CCV problems</li>
                 <li>Complexity Theory and Algorithms</li>
-                <li>Event Extraction and Information Retrieval</li>
+                
             </ul>
         </section>
         <section id="publications">
             <h2>Publications</h2>
-            <p>(Add your publications here in BibTeX or formatted style)</p>
+            <p>...Work in Progress...</p>
         </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <ul>
-                <li><strong>Event Detail Extraction</strong> — NLP project for structured event extraction from unstructured text.</li>
-                <li><strong>Spreadsheet in Rust</strong> — Functional spreadsheet application with UI.</li>
-                <li><strong>NEAT Integration Scripts</strong> — Automated CorelDRAW & InDesign workflows.</li>
-            </ul>
-        </section>
+       
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: abhishek@example.com<br>GitHub: <a href="https://github.com/atiwari-csz">atiwari-csz</a></p>
+            <p>Email: csz248491@cse.iitd.ac.in<br>GitHub: <a href="https://github.com/atiwari-csz">atiwari-csz</a></p>
         </section>
     </main>
     <footer>
