--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abhishek Tiwari | Research</title>
+    <title>Abhishek Tiwari</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Abhishek Tiwari</h1>
         <p>PhD Scholar, IIT Delhi | Theoretical Computer Science• Complexity Theory</p>
+        <p>M.Sc. Computer Science, Banaras Hindu University, Varanasi</p>
     </header>
     <nav>
         <a href="#about">About</a>
