--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhishek Tiwari</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Abhishek Tiwari's research webpage: theoretical CS, complexity, and ML">
+    <meta name="author" content="Abhishek Tiwari">
 </head>
 <body>
     <header>
         <h1>Abhishek Tiwari</h1>
-        <p>PhD Scholar, IIT Delhi | Theoretical Computer Science• Complexity Theory</p>
-        <p>M.Sc. Computer Science, Banaras Hindu University, Varanasi</p>
+        <p>PhD Scholar, IIT Delhi | Theoretical Computer Science • Complexity Theory</p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -22,25 +23,31 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a PhD scholar at IIT Delhi with a background in computer science and a passion for theoretical computer science,ML and AI.</p>
+            <p>
+                I am currently a PhD scholar at IIT Delhi exploring areas in theoretical computer science.
+                My interests span complexity theory, comparator circuit value problems (CCV), and the intersections
+                of formal reasoning with modern AI. I previously completed my MSc in Computer Science from Banaras Hindu University. I enjoy playing chess and reading fiction books.
+            </p>
         </section>
         <section id="research">
             <h2>Research Interests</h2>
             <ul>
-                <li>Theoretical CS</li>
-                <li>Comparator Circuits and CCV problems</li>
+                <li>Theoretical Computer Science</li>
+                <li>Comparator Circuits and CCV Problems</li>
                 <li>Complexity Theory and Algorithms</li>
-                
             </ul>
         </section>
         <section id="publications">
             <h2>Publications</h2>
             <p>...Work in Progress...</p>
         </section>
-       
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: csz248491@cse.iitd.ac.in<br>GitHub: <a href="https://github.com/atiwari-csz">atiwari-csz</a></p>
+            <p>Email: csz248491@cse.iitd.ac.in<br>
+               GitHub: <a href="https://github.com/atiwari-csz">atiwari-csz</a><br>
+               LinkedIN: <a href="www.linkedin.com/in/abhishek-tiwari-2533b3276" target="_blank">LinkedIN Profile</a><br>
+               ORCID: <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">0000-0000-0000-0000</a>
+            </p>
         </section>
     </main>
     <footer>
